         fmfconv.[ch],fmfconv_aiff.c,fmfconv_au.c,fmfconv_ff.c,fmfconv_ppm.c,
         fmfconv_scr.c,fmfconv_wav.c,fmfconv_yuv.c: fix hard-coded Id tags and
         add missing properties (Sergio).
20121201 configure.ac: fix the build when libaudiofile is not found and we are
         using an old pkg-config/autoconf. Don't interrupt COMPAT_OSNAME output
         with other checks (Sergio).
20121206 configure.ac: allow dynamic linking against system libraries for
         audio2tape on Windows to fix the build with libaudiofile 0.3 (Sergio).
20121208 fmfconv.c: preliminary support for 64-bits binaries for Windows (patch
         #3591613) (Sergio).
20121208 README: document support for reading PZX files (Sergio).
20121227 man/fuse-utils.1: mention fmfconv (Fred).
20121227 configure.ac: bump version number to 1.1.0 (Fred).
20121227 ChangeLog,README: first updates for a "1.1.0" release (Fred).
20121228 man/fmfconv.1: add some more details on command line arguments (Fred).
20121228 fmfconv.c: tweak help text (Fred).
20121228 configure.ac: allow ffmpeg detection to use local-prefix (Fred).
20121229 man/*.1: fix quotes, dashes and spacing (Stuart).
20130106 fmfconv_au.c: improve addition of annotation field to au format files
         (thanks, Stuart Brady) (Alberto Garcia).
20130107 man/fmfconv.1: add some more details on command line arguments (Fred).
20130113 fmfconv_ff.c: migrate to ffmpeg 1.0.1 API (bug #272) (Fred and rkd77).
20130202 fmfconv.c: fix a crash when input file not exists (Sergio).
20130202 man/fmfconv.1: complete SYNOPSIS, SEE ALSO and AUTHOR sections. Remove
         FILES section. Punctuation fixes (Sergio).
20130203 man/snapconv.1: complete SYNOPSIS (Fred).
20130203 converter/romloader.cc: fix incomplete byte warning (thanks, Ivan
         Shmakov) (Fred).
20130212 man/audio2tape.1: fix input file specification (Fred).
20130216 AUTHORS,man/createhdf.1,man/raw2hdf.1: fix broken URLs (Sergio).